nginx-plus-ingress/advanced-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: advanced-ingress-with-annotations
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/server-snippets: |
      location / {
        return 302 /foo;
      }
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: bar-svc
          servicePort: 80
      - path: /foo
        backend:
          serviceName: foo-svc
          servicePort: 80
